--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "bootstrap": "^5.3.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0"
   }
 }
